# comail

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.githooks/: pre-commit
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: check-signing.yml  ci.yml  release.yml
docs/: DEVELOPMENT.md  oauth-setup.md
public/: backdrop.html
public/intro/: CREDITS.md
scripts/: package-linux.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: CODESIGNING.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/comail-core/: Cargo.toml
src-tauri/crates/comail-core/src/: config.rs  error.rs  events.rs  graph.rs  graphcal.rs  lib.rs  models.rs  preview.rs
src-tauri/crates/comail-core/src/accounts/: credentials.rs  mod.rs  providers.rs
src-tauri/crates/comail-core/src/ai/: mod.rs
src-tauri/crates/comail-core/src/autolabel/: mod.rs
src-tauri/crates/comail-core/src/caldav/: discovery.rs  http.rs  mod.rs  push.rs  rrule.rs  sync.rs  task.rs  xml.rs
src-tauri/crates/comail-core/src/calendar/: mod.rs
src-tauri/crates/comail-core/src/db/: migrations.rs  mod.rs
src-tauri/crates/comail-core/src/db/migrations/: 001_init.sql  002_perf_indexes.sql  003_unsub_attach_calendar.sql  004_embeddings.sql  005_labels.sql  006_contact_fold.sql  007_auto_labels.sql  008_calendar_rsvp.sql  009_caldav.sql  010_sender_via.sql  011_robot_automated.sql  012_sync_resilience.sql  013_fts_contentless_delete.sql  014_routing.sql  015_ai_automation_annotations.sql  016_ai_usage.sql  017_contact_accounts.sql  018_series_master.sql
src-tauri/crates/comail-core/src/db/repo/: accounts.rs  actions.rs  ai_usage.rs  caldav.rs  calendar.rs  contacts.rs  counts.rs  email_stats.rs  embeddings.rs  folders.rs  labels.rs  messages.rs  mod.rs  notifications.rs  search.rs  settings.rs  snippets.rs  snoozes.rs  splits.rs  sync_failures.rs  threads.rs
src-tauri/crates/comail-core/src/embed/: mod.rs  store.rs  worker.rs
src-tauri/crates/comail-core/src/imap/: mod.rs
src-tauri/crates/comail-core/src/mime/: mod.rs
src-tauri/crates/comail-core/src/oauth/: flow.rs  loopback.rs  mod.rs  providers.rs  tokens.rs  xoauth2.rs
src-tauri/crates/comail-core/src/queue/: mod.rs
src-tauri/crates/comail-core/src/route/: mod.rs
src-tauri/crates/comail-core/src/scheduler/: mod.rs
src-tauri/crates/comail-core/src/search/: mod.rs
src-tauri/crates/comail-core/src/smtp/: mod.rs
src-tauri/crates/comail-core/src/sync/: engine.rs  folder_map.rs  mod.rs  threading.rs
src-tauri/crates/comail-core/tests/: attachment_staging.rs  dovecot_e2e.rs  first_sync.rs  imap_probe.rs  labels.rs  offline.rs  perf.rs  search_ranking.rs  semantic_search.rs  send_e2e.rs  voice_corpus.rs
src-tauri/crates/comail-core/tests/support/: smtp_sink.py
src-tauri/icons/: icon.icns
src-tauri/resources/models/: README.md
src-tauri/scripts/: fetch-embedding-model.sh  macos-dev-cert.sh  macos-dev-sign.sh  make_icon.py
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  notifications.rs
src/components/calendar/: AvailabilityPicker.tsx  CalendarDrawer.tsx  CalendarScreen.tsx  EventCreate.tsx  EventDetailPopover.tsx  InviteCard.tsx  MonthView.tsx  useGridDrag.ts
src/components/common/: FpsMeter.tsx  LabelPopover.tsx  Markdown.tsx  MovePopover.tsx  ShortcutHelp.tsx  Sidebar.tsx  SnoozePopover.tsx  SplitPopover.tsx  TimePopover.tsx  Toasts.tsx  TopBar.tsx
src/components/compose/: Composer.tsx  RecipientField.tsx  RichBody.tsx
src/components/inbox/: ContactPane.tsx  InboxScreen.tsx  InboxZero.tsx  SplitTabs.tsx  ThreadContextMenu.tsx  ThreadList.tsx  ThreadRow.tsx
src/components/onboarding/: IntroMark.tsx  Onboarding.tsx  SpaceIntro.tsx
src/components/palette/: CommandPalette.tsx
src/components/search/: SearchScreen.tsx  SourcePreview.tsx
src/components/settings/: CalendarSettings.tsx  LabelsPanel.tsx  SettingsPanel.tsx  SnippetsPanel.tsx  SplitsPanel.tsx  panelKit.tsx
src/components/thread/: AttachmentPreviewModal.tsx  ConversationScreen.tsx  MessageCard.tsx
src/i18n/: index.ts
src/i18n/locales/: TRANSLATION_STATUS.md
src/ipc/: commands.ts  errors.ts  events.ts  mock.ts  types.ts  updater.ts
src/keyboard/: commandScore.test.ts  commandScore.ts  commands.tsx  context.ts  registry.ts
src/lib/: aiCommand.ts  availability.test.ts  availability.ts  calendarGrid.test.ts  calendarGrid.ts  emailDark.ts  folders.ts  format.test.ts  format.ts  heatmap.test.ts  heatmap.ts  intro.test.ts  intro.ts  mailto.test.ts  mailto.ts  mentions.test.ts  mentions.ts  quickadd.test.ts  quickadd.ts  quotes.test.ts  quotes.ts  richtext.test.ts  richtext.ts  selection.ts  signatures.test.ts  signatures.ts  snooze.ts  sound.ts  splitOrder.test.ts  splitOrder.ts  summaryStream.test.ts  summaryStream.ts  syncStatus.test.ts  syncStatus.ts  useInstallUpdate.ts  useModHeld.ts
src/queries/: actions.ts  client.ts  dockBadge.ts  events.ts  hooks.ts
src/stores/: ui.ts
src/themes/: app.css
(+45 files in other folders)
