[package]
name = "comail-core"
version = "0.2.23"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true

# email protocols
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder", "pool", "hostname"] }
# full_encoding pulls in encoding_rs so non-UTF-8 header/body charsets
# (GB2312/GBK/Big5, Shift-JIS, EUC-KR, ...) decode correctly instead of
# turning into U+FFFD replacement chars. Default features are empty in 0.11.
mail-parser = { version = "0.11", features = ["full_encoding"] }
mail-builder = "0.4"

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
futures = "0.3"

# storage
rusqlite = { version = "0.37", features = ["bundled", "backup", "functions"] }
dirs = "6"

# local embeddings (pure Rust, CPU backend only - no MKL/CUDA/Accelerate,
# no oniguruma C lib, rustls for downloads - keeps comail a clean static binary)
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"
tokenizers = { version = "0.23", default-features = false, features = ["fancy-regex"] }
hf-hub = { version = "1", default-features = false, features = ["rustls-tls"] }

# auth
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }
base64 = "0.22"
sha2 = "0.10"
url = "2"

# CalDAV (HTTP + multistatus XML); rustls keeps the no-native-TLS property
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "http2"] }
quick-xml = { version = "0.37", features = ["encoding"] }
async-trait = "0.1"

# misc
ammonia = "4"
deunicode = "1"
rand = "0.9"
regex = "1"
once_cell = "1"
calamine = "0.36.0"
zip = "8.6.0"
pulldown-cmark = "0.13.4"
csv = "1.4.0"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
